# ramsey

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml
ramsey/: app.py  backfill.py  cache.py  db.py  importing.py  migrate.py  models.py  parsing.py  posters.py  settings.py
ramsey/static/: manifest.json
ramsey/static/js/: main.js  navbar.js
ramsey/templates/: base.html  index.html  navbar.html  stats.html
ramsey/templates/components/: column_chart.html  library.html  movie.html  movie_detail.html  movie_page.html  search_results.html  stars.html  stats_drilldown.html  watched.html  watchlist_movie.html
