[project]
name = "ramsey"
version = "0.1.0"
authors = [{ name = "atbuy", email = "buy@atbuy.dev" }]
description = "Keep track of what movies and shows you have seen"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["movie", "critic", "rating"]
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
dependencies = ["fastapi==0.115.5", "jinja2==3.1.4", "uvicorn==0.32.1"]

[project.optional-dependencies]
dev = ["pre-commit==4.0.1", "ruff==0.8.0"]

[tool.setuptools]
packages = ["ramsey"]
include-package-data = true

[tool.setuptools.package-data]
ramsey = ["static/css/*", "static/images/*", "templates/*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
