[project]
name = "ramsey"
version = "0.1.0"
authors = [{ name = "atbuy", email = "buy@atbuy.dev" }]
description = "Keep track of what movies and shows you have seen"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["movie", "critic", "rating"]
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "beautifulsoup4==4.12.3",
  "fastapi==0.115.5",
  "jinja2==3.1.4",
  "lxml==5.3.0",
  "pydantic==2.10.1",
  "pydantic-settings==2.6.1",
  "redis[hiredis]==5.2.0",
  "requests==2.32.3",
  "uvicorn==0.32.1",
]

[project.optional-dependencies]
dev = ["pre-commit==4.0.1", "ruff==0.8.0"]

[tool.setuptools]
packages = ["ramsey"]
include-package-data = true

[tool.setuptools.package-data]
ramsey = [
  "static/images/*",
  "static/js/*",
  "templates/*",
  "templates/components/*",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
